--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@ function rotateAnimation(el,speed){
                 	<h3>Rakesh Parchuri</h3>
                     <p>Binary Exploitation</p><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </div>
-                <div class=" Portfolio-box alumini">
+                <!--<div class=" Portfolio-box alumini">
 											<a href="#"><img class="img-circle" src="img/Vivek.jpg" alt="" ></a>
 											<a href="https://twitter.com/frefty">
 											<h3>Vivek Parikh</h3>
 												<p>Reverse Engineering</p><i class="fa fa-twitter" aria-hidden="true"></i></a>
-									</div>
+									</div>-->
 								<div class=" Portfolio-box forensics">
 										<a href="#"><img class="img-circle" src="img/shivac.jpg" alt="" ></a>
 										<a href="https://twitter.com/shivnambiar1">
