--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function rotateAnimation(el,speed){
 </head>
 <body>
 <div style="overflow:hidden;">
-<!--<a style="position: absolute; right: 0;" class="link animated fadeInUp delay-1s" href="https://bi0s.typeform.com/to/hmQhlS" data-mode="1" target="_blank">Join Us</a>-->
+<a style="position: absolute; right: 0;" class="link animated fadeInUp delay-1s" href="https://bi0s.typeform.com/to/hmQhlS" data-mode="1" target="_blank">Join Us</a>
 <header class="header" id="header"><!--header-start-->
 	<div class="container">
 		<a href="#">
