updated home page

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
                                       <img class="round" src="../teambi0s.github.io/img/Portfolio-pic20.jpg">
                                       <a href="https://twitter.com/a0xnirudh" style="color:#428bca;"><p>Anirudh Anand  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Web Application Security</p>
                                       </div>
-                                      <div class="img-with-text col-md-3 filterDiv current">
+                                      <div class="img-with-text col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/heeraj.jpg">
                                       <a href="https://twitter.com/heerajnair" style="color:#428bca;"><p>Heeraj  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Server Side Security</p>
                                       </div>
-                                      <div class="img-with-text col-md-3 filterDiv current">
+                                      <div class="img-with-text col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/gokulK.jpg">
                                       <a href="https://twitter.com/gkgkrishna33" style="color:#428bca;"><p>Gokul Krishna P  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Client Side Security</p>
                                       </div>
@@ -183,11 +183,11 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
                                       </div>
                                     </div>
                                     <div class="authorContainer">
-                                      <div class="img-with-text col-sm-12 col-md-3 filterDiv current">
+                                      <div class="img-with-text col-sm-12 col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/abhishek.jpg">
                                         <a href="https://twitter.com/abhi_r3v0" style="color:#428bca;"><p>Abhishek J M  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Android Security</p>
                                       </div>
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/jkc.jpg">
                                         <a href="https://twitter.com/jkrshnmenon" style="color:#428bca;"><p>Jayakrishna Menon  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Heap based Exploitation</p>
                                       </div>
@@ -195,7 +195,7 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
                                         <img class="round" src="../teambi0s.github.io/img/Portfolio-pic4.jpg">
                                         <a href="https://twitter.com/Rakesh13044" style="color:#428bca;"><p>Rakesh Parchuri  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Binary Exploitation</p>
                                       </div>
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/shivac.jpg">
                                       <a href="https://twitter.com/shivnambiar1" style="color:#428bca;"><p>Shivkrishna A  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Memory Forensics</p>
                                     </div>
@@ -204,37 +204,37 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
                                 </li>
                                 <li class="slide">
                                   <div class="quoteContainer">
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/arjun.jpg">
                                         <a href="https://twitter.com/ArjunKikz" style="color:#428bca;"><p>Arjun T U  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Reverse Engineering</p>
                                       </div>
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/aswinmguptha.jpg">
                                         <a href="https://twitter.com/aswinmguptha" style="color:#428bca;"><p>Aswin M Guptha  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Web Security</p>
                                       </div>
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/akshay_ajayan.jpg">
                                         <a href="https://twitter.com/r00tus3r" style="color:#428bca;"><p>Akshay Ajayan  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Reverse Engineering</p>
                                       </div>
-                                      <div class="img-with-text  col-md-3 filterDiv current">
+                                      <div class="img-with-text  col-md-3 ">
                                         <img class="round" src="../teambi0s.github.io/img/sid-m.jpg">
                                         <a href="https://twitter.com/Tr3x__" style="color:#428bca;"><p>Siddharth Muralee  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Reverse Engineering</p>
                                       </div>
                                   </div>
                                   <div class="authorContainer">
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/tarun1.jpg">
                                       <a href="https://twitter.com/tarunkantg" style="color:#428bca;"><p>Tarunkant Gupta  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Web Exploitation</p>
                                     </div>
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/sidhant.jpg">
                                       <a href="" style="color:#428bca;"><p>Sidhant Gupta  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Binary Exploitation</p>
                                     </div>
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/vignesh1.jpg">
                                       <a href="" style="color:#428bca;"><p>Vignesh S Rao  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Binary Exploitation</p>
                                     </div>
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/saastha.jpg">
                                       <a href="" style="color:#428bca;"><p>Saastha Vasan  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Reverse Engineering</p>
                                     </div>
@@ -243,15 +243,15 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
                                 </li>
                                 <li class="slide">
                                   <div class="quoteContainer">
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/ashu.jpg" >
                                       <a href="https://twitter.com/s0rc3r3r12" style="color:#428bca;"><p>Ashutosh Ahelleya  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Cryptography</p>
                                     </div>
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/Karthik1.jpg">
                                     <a href="https://twitter.com/nambiar_kartuzz" style="color:#428bca;">  <p>Karthik Nambiar  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Forensics</p>
                                     </div>
-                                    <div class="img-with-text  col-md-3 filterDiv current">
+                                    <div class="img-with-text  col-md-3 ">
                                       <img class="round" src="../teambi0s.github.io/img/Ashwin-N.jpg">
                                       <a href="https://twitter.com/0xsilipwn" style="color:#428bca;"><p>Ashwin Nambiar  <i class="fa fa-twitter" aria-hidden="true"></i></a><br>Hardware Security</p>
                                     </div>
@@ -382,7 +382,7 @@ First team from India, formed in 2007. bi0s was invited to compete in PHDays CTF
     <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
     <script src="js/jssor.slider-26.9.0.min.js" type="text/javascript"></script>
     <script src="assets/js/main.js"></script>
-    
+
 </body>
 
 </html>
